# isocontour_extractor

./: LICENSE  README.md  pyproject.toml
data/fields/: brain.npy  bunny.npy  circle.npy  dragon.npy  square.npy  teaser.npy  wave.npy
data/np/: brain_contour.npz  brain_cycle.npz
src/cglib/: calc.py  fields.py  graph.py  index.py  polylines.py  stitch.py  type.py
src/cglib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: README.md  main.py  requirements.txt  tosvg.py  visualise.py
